# beets-rockbox

./: .gitignore  INTERNALS.adoc  INTERNALS.md  README.adoc  README.html  README.md  flake.nix  pyproject.toml
beetsplug/rockbox/: __init__.py  config.py  database.py
nix/: package.nix
test/: cli_test.py  database_test.py  helper.py
test/fixtures/: 01 Looking Back.opus  01 Queendom.opus  02 Bag of Bones.opus  02 Forgotten Love.opus  min.opus
